Use correct tests for isa-promise

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(print,promise)
 export(catch)
 export(finally)
 export(fmap.promise)
+export(is.promise)
 export(new_promise)
 export(new_promise_domain)
 export(promise_all)
