Stop using finalizer for detecting unhandled errors
Not only are finalizers generally scary, but they introduce totally
nondeterministic timing between when an unhandled error happens and
when it is reported--often takes multiple commands at the R console
to trigger the GC.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,8 @@ Description: More about what it does (maybe more than one line)
 License: MIT + file LICENSE
 Imports:
     R6,
-    later
+    later,
+    rlang
 Suggests:
     testthat
 Roxygen: list(markdown = TRUE)
