--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,10 @@ Imports:
     rlang
 Suggests:
     testthat
+LinkingTo:
+    later,
+    Rcpp
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 6.0.1
+RoxygenNote: 5.0.1
 Encoding: UTF-8
 LazyData: true
