--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 S3method(format,promise)
 S3method(print,promise)
+export("%>%")
+export("%>>%")
 export(catch)
 export(finally)
 export(fmap.promise)
@@ -17,3 +19,5 @@ export(resolved)
 export(then)
 export(with_promise_domain)
 import(R6)
+importFrom(magrittr,"%>%")
+importFrom(monads,"%>>%")
