--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,4 +17,6 @@ export(resolved)
 export(then)
 export(with_promise_domain)
 import(R6)
+import(later)
+importFrom(Rcpp,evalCpp)
 useDynLib(promise)
