--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,9 @@ S3method(format,promise)
 S3method(print,promise)
 export("%...!%")
 export("%...>%")
+export("%>%")
 export("%T...!%")
+export("%T>%")
 export(catch)
 export(finally)
 export(is.promise)
@@ -21,4 +23,6 @@ export(with_promise_domain)
 import(R6)
 import(later)
 importFrom(Rcpp,evalCpp)
+importFrom(magrittr,"%>%")
+importFrom(magrittr,"%T>%")
 useDynLib(promise)
