Add %...T>%, rename %T...!% to %...T!%

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,9 @@ S3method(format,promise)
 S3method(print,promise)
 export("%...!%")
 export("%...>%")
+export("%...T!%")
+export("%...T>%")
 export("%>%")
-export("%T...!%")
 export("%T>%")
 export(catch)
 export(finally)
