--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,14 +11,10 @@ export("%T>%")
 export(catch)
 export(finally)
 export(is.promise)
-export(new_promise)
 export(new_promise_domain)
+export(promise)
 export(promise_all)
 export(promise_race)
-export(reject)
-export(rejected)
-export(resolve)
-export(resolved)
 export(then)
 export(with_promise_domain)
 import(R6)
