Rename package to "promises" due to name collision with bioc package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,4 +22,4 @@ import(later)
 importFrom(Rcpp,evalCpp)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,"%T>%")
-useDynLib(promise)
+useDynLib(promises)
