then et al support implicit conversion of objects to promises
future::Future support is built in

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,9 +14,11 @@ Imports:
     Rcpp,
     later,
     rlang,
+    stats,
     magrittr
 Suggests:
-    testthat
+    testthat,
+    future
 LinkingTo: later,
     Rcpp
 Roxygen: list(markdown = TRUE)
