--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: promises
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0.9000
+Title: Abstractions for Promise-based Async Programming
+Version: 0.1.0.9001
 Authors@R: c(
       person("Joe", "Cheng", email = "joe@rstudio.com", role = c("aut", "cre")),
       person("RStudio", role = c("cph"))
