Add is.promising, to detect futures in addition to promises

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(as.promise)
 export(catch)
 export(finally)
 export(is.promise)
+export(is.promising)
 export(new_promise_domain)
 export(promise)
 export(promise_all)
