--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,10 +18,13 @@ Imports:
     magrittr
 Suggests:
     testthat,
-    future
+    future,
+    knitr,
+    rmarkdown
 LinkingTo: later,
     Rcpp
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.0.1
 Encoding: UTF-8
 LazyData: true
+VignetteBuilder: knitr
