--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,3 +28,5 @@ RoxygenNote: 6.0.1
 Encoding: UTF-8
 LazyData: true
 VignetteBuilder: knitr
+URL: https://rstudio.github.io/promises, https://github.com/rstudio/promises
+BugReports: https://github.com/rstudio/promises/issues
