promise_resolve, promise_reject, promise_reduce, more
- Fix a bug with catch(tee=TRUE) "attempt to apply non-function"
- Add promise_resolve, promise_reject
- More examples, docs
- Add promise_reduce

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,9 @@ export(promise)
 export(promise_all)
 export(promise_lapply)
 export(promise_race)
+export(promise_reduce)
+export(promise_reject)
+export(promise_resolve)
 export(then)
 export(with_promise_domain)
 import(R6)
