promise_lapply -> promise_map
Also renamed promise_reduce arguments; .init= is required now

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -11,8 +11,8 @@ reference:
       - promise_all
   - title: Functional promises
     contents:
+      - promise_map
       - promise_reduce
-      - promise_lapply
   - title: Creating promises
     contents:
       - promise
