--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,7 @@ export(is.promising)
 export(new_promise_domain)
 export(promise)
 export(promise_all)
-export(promise_lapply)
+export(promise_map)
 export(promise_race)
 export(promise_reduce)
 export(promise_reject)
