--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,11 @@ Authors@R: c(
       person("Joe", "Cheng", email = "joe@rstudio.com", role = c("aut", "cre")),
       person("RStudio", role = c("cph", "fnd"))
     )
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: Provides fundamental abstractions for doing asynchronous programming
+    in R using promises. Asynchronous programming is useful for allowing a single
+    R process to orchestrate multiple tasks in the background while also attending
+    to something else. Semantics are similar to JavaScript promises, but with a
+    syntax that is idiomatic R.
 License: MIT + file LICENSE
 Imports:
     R6,
