--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: promises
 Type: Package
-Title: Abstractions for Promise-Based Async Programming
-Version: 1.0
+Title: Abstractions for Promise-Based Asynchronous Programming
+Version: 1.0.0
 Authors@R: c(
       person("Joe", "Cheng", email = "joe@rstudio.com", role = c("aut", "cre")),
       person("RStudio", role = c("cph", "fnd"))
@@ -9,7 +9,7 @@ Authors@R: c(
 Description: Provides fundamental abstractions for doing asynchronous programming
     in R using promises. Asynchronous programming is useful for allowing a single
     R process to orchestrate multiple tasks in the background while also attending
-    to something else. Semantics are similar to JavaScript promises, but with a
+    to something else. Semantics are similar to 'JavaScript' promises, but with a
     syntax that is idiomatic R.
 License: MIT + file LICENSE
 Imports:
