--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,8 @@
-pandoc: 1.19.2.1
+pandoc: 2.2.1
 pkgdown: 0.1.0.9000
 pkgdown_sha: 966bc9d667ab87806ef684bab22e39effe62c8a5
 articles:
+  casestudy: casestudy.html
   combining: combining.html
   futures: futures.html
   intro: intro.html
