--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,9 +11,12 @@ export("%...T!%")
 export("%...T>%")
 export("%>%")
 export("%T>%")
+export(WorkQueue)
 export(as.promise)
 export(catch)
 export(finally)
+export(future_promise)
+export(future_promise_queue)
 export(is.promise)
 export(is.promising)
 export(new_promise_domain)
