Fix missing code ref

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -16,6 +16,7 @@ reference:
   - title: Creating promises
     contents:
       - promise
+      - future_promise
       - promise_resolve
       - is.promise
   - title: Domains
