--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -65,7 +65,7 @@ jobs:
         shell: Rscript {0}
         run: |
           options(rmarkdown.html_vignette.check_title = FALSE)
-          pkgdown::build_site()
+          pkgdown::build_site(new_process = FALSE)
 
       - name: Validate all topics exist (PR)
         if: github.event_name != 'push'
