--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,9 +21,12 @@ Imports:
     magrittr
 Suggests:
     testthat,
-    future,
+    future (>= 1.21.0),
+    fastmap (>= 1.1.0),
+    purrr,
     knitr,
-    rmarkdown
+    rmarkdown,
+    vembedr
 LinkingTo: later,
     Rcpp
 Roxygen: list(markdown = TRUE)
