--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -9,6 +9,6 @@
 ^doc$
 ^Meta$
 
-^vignettes/future_promise/*.key$
-^vignettes/future_promise/*.R$
+^vignettes/future_promise/.*\.key$
+^vignettes/future_promise/.*\.R$
 ^CRAN-RELEASE$
