--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -4,9 +4,11 @@
 ^docs$
 ^index.md$
 ^\.github$
+^cran-comments\.md$
 ^revdep$
 ^doc$
 ^Meta$
 
-^vignettes/future_promise/*.key$
-^vignettes/future_promise/*.R$
+^vignettes/future_promise/.*\.key$
+^vignettes/future_promise/.*\.R$
+^CRAN-RELEASE$
