Use callable workflows

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,3 +38,4 @@ VignetteBuilder: knitr
 URL: https://rstudio.github.io/promises/, https://github.com/rstudio/promises
 BugReports: https://github.com/rstudio/promises/issues
 Language: en-US
+Config/Needs/website: rsconnect
