--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -6,15 +6,15 @@ on:
   schedule:
     - cron:  '0 8 * * 0' # every sunday
 
-name: Package Checks
+name: Package checks
 
 jobs:
-  pkgdown:
-    uses: rstudio/shinycoreci/.github/workflows/call-pkgdown.yaml@v1
+  website:
+    uses: rstudio/shinycoreci/.github/workflows/call-website.yaml@v1
     with:
       check-title: false
-  rituals:
-    uses: rstudio/shinycoreci/.github/workflows/call-rituals.yaml@v1
+  routine:
+    uses: rstudio/shinycoreci/.github/workflows/call-routine.yaml@v1
   R-CMD-check:
     uses: rstudio/shinycoreci/.github/workflows/call-R-CMD-check.yaml@v1
     with:
