--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -18,7 +18,7 @@ jobs:
     with:
       check-title: false
   routine:
-    uses: rstudio/shinycoreci/.github/workflows/call-routine.yaml@v1
+    uses: rstudio/shiny-workflows/.github/workflows/routine.yaml@v1
   R-CMD-check:
     uses: rstudio/shiny-workflows/.github/workflows/R-CMD-check.yaml@v1
   R-CMD-check-with-dont-test:
