--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Imports:
     later,
     rlang,
     stats,
-    magrittr
+    magrittr (>= 1.5)
 Suggests:
     testthat,
     future (>= 1.21.0),
