--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,3 +37,4 @@ importFrom(Rcpp,evalCpp)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,"%T>%")
 useDynLib(promises)
+useDynLib(promises, .registration = TRUE)
