--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,8 @@ Title: Abstractions for Promise-Based Asynchronous Programming
 Version: 1.2.1.9001
 Authors@R: c(
     person("Joe", "Cheng", , "joe@posit.co", role = c("aut", "cre")),
+    person("Mauricio", "Vargas Sepulveda", role = "ctb",
+        comment = c(ORCID = "0000-0003-1017-7574")),
     person("Posit Software, PBC", role = c("cph", "fnd"))
   )
 Description: Provides fundamental abstractions for doing asynchronous
