--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,8 +33,7 @@ export(then)
 export(with_promise_domain)
 import(R6)
 import(later)
-importFrom(Rcpp,evalCpp)
+importFrom(cpp11,cpp_eval)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,"%T>%")
-useDynLib(promises)
 useDynLib(promises, .registration = TRUE)
