--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -49,11 +49,11 @@ navbar:
       - text: -------
       - text: Integration
       - text: 4. Launching tasks with mirai
-        href: articles/promises_04__mirai.html
+        href: articles/promises_04_mirai.html
       - text: 5a. Launching tasks with future
-        href: articles/promises_04_futures.html
+        href: articles/promises_05a_futures.html
       - text: 5b. Advanced future and promises usage
-        href: articles/promises_05_future_promise.html
+        href: articles/promises_05b_future_promise.html
       - text: -------
       - text: Usage
       - text: 6. Using promises with Shiny
@@ -67,9 +67,11 @@ redirects:
   - ["articles/motivation.html", "articles/promises_01_motivation.html"]
   - ["articles/intro.html", "articles/promises_02_intro.html"]
   - ["articles/overview.html", "articles/promises_03_overview.html"]
-  - ["articles/mirai.html", "articles/promises_04__mirai.html"]
-  - ["articles/futures.html", "articles/promises_04_futures.html"]
-  - ["articles/future_promise.html", "articles/promises_05_future_promise.html"]
+  - ["articles/mirai.html", "articles/promises_04_mirai.html"]
+  - ["articles/futures.html", "articles/promises_05a_futures.html"]
+  - ["articles/future_promise.html", "articles/promises_05b_future_promise.html"]
+  - ["articles/promises_04_futures.html", "articles/promises_05a_futures.html"]
+  - ["articles/promises_05_future_promise.html", "articles/promises_05b_future_promise.html"]
   - ["articles/shiny.html", "articles/promises_06_shiny.html"]
   - ["articles/combining.html", "articles/promises_07_combining.html"]
   - ["articles/casestudy.html", "articles/promises_08_casestudy.html"]
