--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -37,18 +37,25 @@ reference:
 navbar:
   components:
     articles:
-      text: Learning
+      text: Articles
       menu:
+      - text: Overview
       - text: 1. Why use promises?
         href: articles/promises_01_motivation.html
       - text: 2. An informal intro to async programming
         href: articles/promises_02_intro.html
       - text: 3. Working with promises
         href: articles/promises_03_overview.html
-      - text: 4. Launching tasks with future
-        href: articles/promises_04_futures.html
-      - text: 5. Advanced future and promises usage
-        href: articles/promises_05_future_promise.html
+      - text: -------
+      - text: Integration
+      - text: 4. Launching tasks with mirai
+        href: articles/promises_04_mirai.html
+      - text: 5a. Launching tasks with future
+        href: articles/promises_05a_futures.html
+      - text: 5b. Advanced future and promises usage
+        href: articles/promises_05b_future_promise.html
+      - text: -------
+      - text: Usage
       - text: 6. Using promises with Shiny
         href: articles/promises_06_shiny.html
       - text: 7. Combining promises
@@ -60,8 +67,11 @@ redirects:
   - ["articles/motivation.html", "articles/promises_01_motivation.html"]
   - ["articles/intro.html", "articles/promises_02_intro.html"]
   - ["articles/overview.html", "articles/promises_03_overview.html"]
-  - ["articles/futures.html", "articles/promises_04_futures.html"]
-  - ["articles/future_promise.html", "articles/promises_05_future_promise.html"]
+  - ["articles/mirai.html", "articles/promises_04_mirai.html"]
+  - ["articles/futures.html", "articles/promises_05a_futures.html"]
+  - ["articles/future_promise.html", "articles/promises_05b_future_promise.html"]
+  - ["articles/promises_04_futures.html", "articles/promises_05a_futures.html"]
+  - ["articles/promises_05_future_promise.html", "articles/promises_05b_future_promise.html"]
   - ["articles/shiny.html", "articles/promises_06_shiny.html"]
   - ["articles/combining.html", "articles/promises_07_combining.html"]
   - ["articles/casestudy.html", "articles/promises_08_casestudy.html"]
