--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,11 @@ export("%...T!%")
 export("%...T>%")
 export("%>%")
 export("%T>%")
+export("%catch%")
+export("%catch_tee%")
+export("%finally%")
+export("%tee%")
+export("%then%")
 export(as.promise)
 export(catch)
 export(finally)
@@ -34,6 +39,7 @@ export(with_promise_domain)
 import(R6)
 import(later)
 importFrom(Rcpp,evalCpp)
+importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,"%T>%")
 useDynLib(promises)
