--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,8 +17,8 @@ export("%T>%")
 export("%catch%")
 export("%catch_tee%")
 export("%finally%")
-export("%tee%")
 export("%then%")
+export("%then_tee%")
 export(as.promise)
 export(catch)
 export(finally)
