--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -16,9 +16,11 @@ reference:
   - title: Handling promises
     contents:
       - then
+      - "%then%"
       - pipes
   - title: Combining promises
     contents:
+      - "%all%"
       - promise_all
   - title: Functional promises
     contents:
