--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,8 @@ License: MIT + file LICENSE
 URL: https://rstudio.github.io/promises/,
     https://github.com/rstudio/promises
 BugReports: https://github.com/rstudio/promises/issues
+Depends:
+    R (>= 4.1.0)
 Imports:
     fastmap (>= 1.1.0),
     later,
