--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,10 +4,14 @@ Title: Abstractions for Promise-Based Asynchronous Programming
 Version: 1.3.3.9000
 Authors@R: c(
     person("Joe", "Cheng", , "joe@posit.co", role = c("aut", "cre")),
-    person("Barret", "Schloerke", , "barret@posit.co", role = "aut", comment = c(ORCID = "0000-0001-9986-114X")),
-    person("Winston", "Chang", , "winston@posit.co", role = "aut", comment = c(ORCID = "0000-0002-1576-2126")),
-    person("Charlie", "Gao", , "charlie.gao@posit.co", role = "aut", comment = c(ORCID = "0000-0002-0750-061X")),
-    person("Posit Software, PBC", role = c("cph", "fnd"), comment = c(ROR = "03wc8by49"))
+    person("Barret", "Schloerke", , "barret@posit.co", role = "aut",
+           comment = c(ORCID = "0000-0001-9986-114X")),
+    person("Winston", "Chang", , "winston@posit.co", role = "aut",
+           comment = c(ORCID = "0000-0002-1576-2126")),
+    person("Charlie", "Gao", , "charlie.gao@posit.co", role = "aut",
+           comment = c(ORCID = "0000-0002-0750-061X")),
+    person("Posit Software, PBC", role = c("cph", "fnd"),
+           comment = c(ROR = "03wc8by49"))
   )
 Description: Provides fundamental abstractions for doing asynchronous
     programming in R using promises. Asynchronous programming is useful
