--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: promises
 Title: Abstractions for Promise-Based Asynchronous Programming
-Version: 1.3.3.9000
+Version: 1.3.3.9001
 Authors@R: c(
     person("Joe", "Cheng", , "joe@posit.co", role = c("aut", "cre")),
     person("Barret", "Schloerke", , "barret@posit.co", role = "aut",
@@ -23,9 +23,12 @@ License: MIT + file LICENSE
 URL: https://rstudio.github.io/promises/,
     https://github.com/rstudio/promises
 BugReports: https://github.com/rstudio/promises/issues
+Depends:
+    R (>= 4.1.0)
 Imports:
     fastmap (>= 1.1.0),
     later,
+    lifecycle,
     magrittr (>= 1.5),
     R6,
     rlang,
