--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,5 +33,6 @@ export(then)
 export(with_promise_domain)
 import(R6)
 import(later)
+importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,"%T>%")
