`devtools::document()` (GitHub Actions)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,9 +22,9 @@ export(future_promise_queue)
 export(is.promise)
 export(is.promising)
 export(new_promise_domain)
-export(promise)
 export(promise_all)
 export(promise_map)
+export(promise_old)
 export(promise_race)
 export(promise_reduce)
 export(promise_reject)
