Remove `with_otel_span_async(span, expr, ..., auto_end_span=FALSE)` in favor of `with_ospan_promise_domain(span, expr)`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,7 +34,7 @@ export(promise_reject)
 export(promise_resolve)
 export(then)
 export(with_ospan_async)
-export(with_otel_span_async)
+export(with_ospan_promise_domain)
 export(with_promise_domain)
 import(R6)
 import(later)
