feat: Export internal `{otel}` integrations for async operations (#173)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,11 +16,14 @@ export("%>%")
 export("%T>%")
 export(as.promise)
 export(catch)
+export(create_ospan)
+export(end_ospan)
 export(finally)
 export(future_promise)
 export(future_promise_queue)
 export(is.promise)
 export(is.promising)
+export(is_otel_tracing)
 export(new_promise_domain)
 export(promise)
 export(promise_all)
@@ -30,6 +33,8 @@ export(promise_reduce)
 export(promise_reject)
 export(promise_resolve)
 export(then)
+export(with_ospan_async)
+export(with_ospan_promise_domain)
 export(with_promise_domain)
 import(R6)
 import(later)
