--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,6 +47,7 @@ Suggests:
 VignetteBuilder:
     knitr
 Config/Needs/website: rsconnect, tidyverse/tidytemplate
+Config/Needs/check: r-lib/otelsdk
 Config/testthat/edition: 3
 Config/usethis/last-upkeep: 2025-05-27
 Encoding: UTF-8
