Use `otel::is_tracing_enabled(tracer)`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,7 +23,6 @@ export(future_promise)
 export(future_promise_queue)
 export(is.promise)
 export(is.promising)
-export(is_otel_tracing)
 export(new_promise_domain)
 export(promise)
 export(promise_all)
@@ -41,3 +40,9 @@ import(later)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,"%T>%")
+importFrom(otel,as_attributes)
+importFrom(otel,end_span)
+importFrom(otel,get_tracer)
+importFrom(otel,is_tracing_enabled)
+importFrom(otel,start_span)
+importFrom(otel,with_active_span)
