refactor(otel): Add handoff otel promise domain (#176)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,7 +42,7 @@ importFrom(magrittr,"%>%")
 importFrom(magrittr,"%T>%")
 importFrom(otel,as_attributes)
 importFrom(otel,end_span)
-importFrom(otel,get_tracer)
+importFrom(otel,get_active_span)
 importFrom(otel,is_tracing_enabled)
 importFrom(otel,start_span)
 importFrom(otel,with_active_span)
