feat: Add `local_ospan_promise_domain()` for `{coro}` integration

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(future_promise)
 export(future_promise_queue)
 export(is.promise)
 export(is.promising)
+export(local_ospan_promise_domain)
 export(new_promise_domain)
 export(promise)
 export(promise_all)
