--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ import(later)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,"%T>%")
+importFrom(otel,end_span)
 importFrom(otel,get_active_span)
 importFrom(otel,is_tracing_enabled)
 importFrom(otel,start_span)
