--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,8 +34,8 @@ export(then)
 export(with_ospan_async)
 export(with_ospan_promise_domain)
 export(with_promise_domain)
-import(R6)
 import(later)
+importFrom(R6,R6Class)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,"%T>%")
