Add hybrid_then() for flexible sync/async handling
Introduces the hybrid_then() function, which executes handlers synchronously if the input is not a promise, or attaches them as promise callbacks otherwise. Includes documentation, exports, and comprehensive tests for hybrid_then(), as well as helper improvements for assertion counting in tests.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(catch)
 export(finally)
 export(future_promise)
 export(future_promise_queue)
+export(hybrid_then)
 export(is.promise)
 export(is.promising)
 export(local_ospan_promise_domain)
