--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -34,6 +34,9 @@ reference:
   - title: Domains
     contents:
       - with_promise_domain
+  - title: OpenTelemetry
+    contents:
+      - with_ospan_async
 
 navbar:
   components:
