--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Package: promises
 Title: Abstractions for Promise-Based Asynchronous Programming
 Version: 1.4.0
 Authors@R: c(
-    person("Joe", "Cheng", , "joe@posit.co", role = c("aut", "cre")),
-    person("Barret", "Schloerke", , "barret@posit.co", role = "aut",
+    person("Joe", "Cheng", , "joe@posit.co", role = "aut"),
+    person("Barret", "Schloerke", , "barret@posit.co", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-9986-114X")),
     person("Winston", "Chang", , "winston@posit.co", role = "aut",
            comment = c(ORCID = "0000-0002-1576-2126")),
