Rename `with_ospan_async()` to `with_hybrid_ospan()`; Deprecate `with_ospan_async()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(promise_reduce)
 export(promise_reject)
 export(promise_resolve)
 export(then)
+export(with_hybrid_ospan)
 export(with_ospan_async)
 export(with_ospan_promise_domain)
 export(with_promise_domain)
