docs: Add hex logo (#199)
Co-authored-by: gregswinehart <5993637+gregswinehart@users.noreply.github.com>

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,6 +1,6 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
-^_pkgdown\.yml$
+^pkgdown$
 ^docs$
 ^index.md$
 ^\.github$
@@ -18,3 +18,4 @@
 ^.claude$
 ^CLAUDE.md$
 ^.vscode$
+^logo$
