--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -36,7 +36,7 @@ reference:
       - with_promise_domain
   - title: OpenTelemetry
     contents:
-      - with_hybrid_ospan
+      - with_hybrid_otel_span
 
 navbar:
   components:
