Deprecate **all** `ospan` functions in favor of `otel_span` naming

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(hybrid_then)
 export(is.promise)
 export(is.promising)
 export(local_ospan_promise_domain)
+export(local_otel_span_promise_domain)
 export(new_promise_domain)
 export(promise)
 export(promise_all)
@@ -35,6 +36,7 @@ export(then)
 export(with_hybrid_otel_span)
 export(with_ospan_async)
 export(with_ospan_promise_domain)
+export(with_otel_span_promise_domain)
 export(with_promise_domain)
 importFrom(R6,R6Class)
 importFrom(later,later)
