--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,9 +33,9 @@ export(promise_reduce)
 export(promise_reject)
 export(promise_resolve)
 export(then)
-export(with_hybrid_otel_span)
 export(with_ospan_async)
 export(with_ospan_promise_domain)
+export(with_otel_span)
 export(with_otel_span_promise_domain)
 export(with_promise_domain)
 importFrom(R6,R6Class)
