--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -37,7 +37,7 @@ reference:
       - with_promise_domain
   - title: OpenTelemetry
     contents:
-      - with_hybrid_otel_span
+      - with_otel_span
 
 navbar:
   components:
