refactor: Rename `with_ospan_async()` to `with_otel_span()` and `{with,local}_ospan_promise_domain()` to `{with,local}_otel_span_promise_domain()` (#198)

--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -37,7 +37,7 @@ reference:
       - with_promise_domain
   - title: OpenTelemetry
     contents:
-      - with_ospan_async
+      - with_otel_span
 
 navbar:
   components:
