--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,12 +34,12 @@ Imports:
     R6,
     rlang
 Suggests:
+    cpp11,
     future (>= 1.21.0),
     knitr,
     mirai,
     otelsdk (>= 0.2.0),
     purrr,
-    Rcpp,
     rmarkdown,
     spelling,
     testthat (>= 3.0.0),
