--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -25,9 +25,15 @@ jobs:
     uses: rstudio/shiny-workflows/.github/workflows/R-CMD-check.yaml@v1
     with:
       cache-version: "regular-1"
+      extra-packages: |
+        any::decor
+        any::tibble
 
   R-CMD-check-with-dont-test:
     uses: rstudio/shiny-workflows/.github/workflows/R-CMD-check.yaml@v1
     with:
       extra-check-args: '"--run-donttest"'
       cache-version: "donttest-1"
+      extra-packages: |
+        any::decor
+        any::tibble
