Specify check packages in DESCRIPTION instead

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,6 +46,7 @@ Suggests:
     vembedr
 VignetteBuilder:
     knitr
+Config/Needs/check: decor, tibble
 Config/Needs/website: rsconnect, tidyverse/tidytemplate
 Config/testthat/edition: 3
 Config/usethis/last-upkeep: 2025-05-27
